# pc-landing-page

./: Cargo.toml
.github/workflows/: build-client.yml  build-server.yml  format-client.yml  format-server.yml  lint-client.yml  lint-server.yml
client/: package-lock.json  package.json
client/html/: index_template.html
client/lint/: disallow-relative-imports.js
client/src/: App.tsx  ServerButton.tsx  ServerMsgs.tsx  index.tsx
client/src/util/: async_sockets.ts  status.ts  util.ts
proto/: game_state.proto  mc_server.proto  test.proto  user.proto
server/: Cargo.toml  build.rs
server/src/: auth.rs  checkpoint_stream.rs  controller.rs  error.rs  http.rs  https.rs  lib.rs  main.rs  mc_server.rs  proto.rs  security.rs  socket_init.rs  static_file_server.rs  systemctl.rs  util.rs
server/src/controller/: controller.rs  controller_interface.rs  mod.rs  sim_server_controller.rs  systemctl_server_controller.rs
server/src/systemctl/: commands.rs  mod.rs  sim_unit.rs  sys_unit.rs  unit.rs  unit_list.rs  util.rs
server/tests/: server_state_tests.rs
src/: main.rs
