[package]
name = "pc-landing-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_sockets = { path = "modules/async-sockets/rust" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rustls = "0.23.5"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
clap = { version = "4.5.4", features = ["derive"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
systemctl = "0.3.1"
pretty_env_logger = "0.5.0"

