[package]
name = "pc-landing-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_sockets = { path = "modules/async-sockets/rust" }
tokio = { version = "1", features = ["full", "test-util"] }
rustls = "0.23.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
pretty_env_logger = "0.5.0"
warp = { version = "0.3.7", features = ["tls"] }
prost = "0.12.4"
strum = { version = "0.26.2" }
strum_macros = "0.26.2"
itertools = "0.12.1"
async-trait = "0.1.80"
bincode = "1.3.3"

[build-dependencies]
prost-build = "0.12.4"

[dev-dependencies]
rstest = "0.19.0"

